backend/test_output.txt
============================= test session starts =============================
platform win32 -- Python 3.13.3, pytest-9.0.2, pluggy-1.6.0 -- C:\Users\KABUM\Documents\Carbon Verify\Empresa Prototipo\CV Files Sonnet\carbon-verify-mvp-prod\carbon-verify-app01\backend\.venv\Scripts\python.exe
cachedir: .pytest_cache
rootdir: C:\Users\KABUM\Documents\Carbon Verify\Empresa Prototipo\CV Files Sonnet\carbon-verify-mvp-prod\carbon-verify-app01\backend
plugins: anyio-4.13.0
collecting ... collected 0 items / 1 error

=================================== ERRORS ====================================
____________________ ERROR collecting tests/test_system.py ____________________
.venv\Lib\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
.venv\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Python313\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
.venv\Lib\site-packages\_pytest\assertion\rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
.venv\Lib\site-packages\_pytest\assertion\rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Python313\Lib\ast.py:54: in parse
    return compile(source, filename, mode, flags,
E     File "C:\Users\KABUM\Documents\Carbon Verify\Empresa Prototipo\CV Files Sonnet\carbon-verify-mvp-prod\carbon-verify-app01\backend\tests\test_system.py", line 519
E       """, "Description": "Comprehensive unit + integration tests for the entire Carbon Verify backend", "IsArtifact": false, "Overwrite": true, "TargetFile": "c:\\Users\\KABUM\\Documents\\Carbon Verify\\Empresa Prototipo\\CV Files Sonnet\\carbon-verify-mvp-prod\\carbon-verify-app01\\backend\\tests\\test_system.py
E       ^
E   SyntaxError: unterminated triple-quoted string literal (detected at line 519)
=========================== short test summary info ===========================
ERROR tests/test_system.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
============================== 1 error in 0.15s ===============================
